# deepseek-r1-rag

./: .gitignore  01_DocumentGPT_Assign15.py  MultiRAG.ipynb  README.md  deepseek2-rag.py  deepseek3.py  models.py  pyproject.toml  requirements.txt
utils/functions/: chat.py
