[project]
name = "deepseek-r1-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "haru",email = "godjaewook@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
